# lp-connection-editor

./: .gitignore  Makefile.am  config.h.in  configure.ac  meson.build
data/: Makefile.am  lp-connection-editor.desktop.in  meson.build
debian/: changelog  control  copyright
src/: Makefile.am  ce-new-connection.ui  ce-resources.c  meson.build
